# kinectv2CalibrationCapture

./: CMakeLists.txt  main.cpp
